# ZenOS

./: .gitignore  Cargo.toml  install.sh
.cargo/: config.toml
apps/zterm/: Cargo.toml
apps/zterm/src/: font.rs  main.rs  pty.rs
contrib/: greetd-config.toml  install-greetd.sh  zenos-session
src/: app.rs  assets.rs  backend.rs  config.rs  drm.rs  handlers.rs  layout.rs  main.rs  render.rs  shaders.rs  state.rs  text.rs
src/renderer/: mod.rs  shader.wgsl
src/ui/: bar.rs  dock.rs  mod.rs
